# kuchenraum

./: .gitignore  Bokeh Plot.html  index.html  kuchen_graph.html  kuchenraum.ipynb  main.py  package-lock.json  package.json  pyproject.toml  rohdaten.json
